--- a/src/containers/Profile.module.css
+++ b/src/containers/Profile.module.css
@@ -57,7 +57,7 @@
   font-size: 2.25rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .mainContainer {
     position: initial;
     top: unset;
